# mesh

./: .gitignore  docker-compose.yml
certificates/: certificate.crt  private.key
common/: go.mod  go.sum
common/utils/: config.go
common/web/: appbuilder.go  application.go  blueprint.go
document_service/: app.env  dockerfile  go.mod  go.sum  main.go
document_service/docs/: docs.go  swagger.json  swagger.yaml
document_service/src/: main.go
document_service/src/api/: apibuilder.go  application.go  document.go  endpoints.go  health.go
proxy/: Cargo.toml  app.env
registry/: app.env  dockerfile  go.mod  go.sum
registry/src/: main.go
registry/src/api/: endpoints.go  service.go
sidecar/: Cargo.toml  app.env  config.yml
sidecar/src/: main.rs
sidecar/src/proxy/: handler.rs  mod.rs
sidecar/src/utils/: mod.rs  service_config.rs
transaction_service/: app.env  dockerfile  go.mod  main.go
transaction_service/docs/: docs.go  swagger.yaml
transaction_service/src/: main.go
transaction_service/src/api/: endpoints.go  health.go  transaction.go
transaction_service/src/utils/: config.go
