[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
hyper = { version = "1.6", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12.15"
config = "0.15.11"
regex = "1.11.1"

